--- a/app/index.html
+++ b/app/index.html
@@ -10,33 +10,32 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>My AngularJS App</title>
+    <title>Message Alert System</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <link rel="stylesheet" href="app.css">
+    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
     <link rel="stylesheet" href="../node_modules/html5-boilerplate/dist/css/normalize.css">
     <link rel="stylesheet" href="../node_modules/html5-boilerplate/dist/css/main.css">
     <script src="../node_modules/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">
-    <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<ul class="menu">
-    <li><a href="#!/view1">view1</a></li>
-    <li><a href="#!/view2">view2</a></li>
-</ul>
-
 <!--[if lt IE 7]>
 <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade
     your browser</a> to improve your experience.</p>
 <![endif]-->
 
-<div ng-view></div>
+<div class="container">
+    <div class="row">
+        <div class="col">
+            <h1>
+                Message Alert System
+            </h1>
+        </div>
+    </div>
+</div>
 
-<div>AngularJS seed app: v<span app-version></span></div>
-
-<!-- In production use:
-<script src="//ajax.googleapis.com/ajax/libs/angularjs/x.x.x/angular.min.js"></script>
--->
+<!---->
 <script src="../node_modules/jquery/dist/jquery.js"></script>
 <script src="../node_modules/popper.js/dist/popper.js"></script>
 <script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
