--- a/app/index.html
+++ b/app/index.html
@@ -35,7 +35,7 @@
 </div>
 <div class="container">
     <div class="row">
-        <div class="col">
+        <div class="col text-white">
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                 labore
                 et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
