node_modules von / nach /app verschoben -> Config aufm Sever erleichtert

--- a/app/index.html
+++ b/app/index.html
@@ -13,11 +13,11 @@
     <title>Message Alert System</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!--    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css">-->
+    <!--    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.css">-->
     <link rel="stylesheet" href="scss/custom.css">
-    <link rel="stylesheet" href="../node_modules/html5-boilerplate/dist/css/normalize.css">
-    <link rel="stylesheet" href="../node_modules/html5-boilerplate/dist/css/main.css">
-    <script src="../node_modules/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
+    <link rel="stylesheet" href="node_modules/html5-boilerplate/dist/css/normalize.css">
+    <link rel="stylesheet" href="node_modules/html5-boilerplate/dist/css/main.css">
+    <script src="node_modules/html5-boilerplate/dist/js/vendor/modernizr-2.8.3.min.js"></script>
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -39,12 +39,12 @@
 <ng-view></ng-view>
 
 <!---->
-<script src="../node_modules/jquery/dist/jquery.js"></script>
-<script src="../node_modules/popper.js/dist/popper.js"></script>
-<script src="../node_modules/bootstrap/dist/js/bootstrap.js"></script>
-<!--  <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>-->
-<script src="../node_modules/angular/angular.js"></script>
-<script src="../node_modules/angular-route/angular-route.js"></script>
+<script src="node_modules/jquery/dist/jquery.js"></script>
+<script src="node_modules/popper.js/dist/popper.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.js"></script>
+<!--  <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.js"></script>-->
+<script src="node_modules/angular/angular.js"></script>
+<script src="node_modules/angular-route/angular-route.js"></script>
 <script src="app.js"></script>
 <script src="homeView/homeView.js"></script>
 <script src="moreInfoView/moreInfoView.js"></script>
