--- a/app/index.html
+++ b/app/index.html
@@ -37,6 +37,7 @@
 <br>
 
 <ng-view></ng-view>
+<script src="plotly-latest.min.js" type="text/javascript"></script>
 
 <!---->
 <script src="node_modules/jquery/dist/jquery.js"></script>
