--- a/app/homeView/homeView.html
+++ b/app/homeView/homeView.html
@@ -9,14 +9,14 @@
     <div class="row text-white">
         <div class="col">
             <div id="test"></div>
-            <h1>Trump Tweets Loaded</h1>
+            <h1>{{topic}} Tweets Loaded</h1>
             <div id="term">
             </div>
             <br>
-            <h1>Trump Hashtags counted</h1>
+            <h1>{{topic}} Hashtags counted</h1>
             <div id="counted"></div>
             <br>
-            <h1>Trump Top Users counted</h1>
+            <h1>{{topic}} Top Users counted</h1>
             <div id="topuser"></div>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                 labore
