--- a/app/homeView/homeView.html
+++ b/app/homeView/homeView.html
@@ -39,6 +39,9 @@
             <br>
             <h1>{{topic}} Top Users counted</h1>
             <div id="topuser"></div>
+            <br>
+            <h1>{{topic}} Sentiment</h1>
+            <div id="sentiment"></div>
             <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
                 labore
                 et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
