--- a/app/homeView/homeView.html
+++ b/app/homeView/homeView.html
@@ -6,6 +6,12 @@
                         ng-click="selectTopic(topic)">{{topic}}
                 </button>
             </div>
+            <div class="input-group">
+                <div class="input-group-prepend">
+                    <button class="btn btn-secondary" type="button" ng-click="queryTopic()">Search</button>
+                </div>
+                <input type="text" class="form-control" ng-model="topicQuery" placeholder="...">
+            </div>
         </div>
         <div class="float-right">
             <div class="input-group">
@@ -30,32 +36,27 @@
     <div class="row text-white">
         <div class="col">
             <div id="test"></div>
-            <h1>{{topic}} Tweets Loaded</h1>
-            <div id="term">
+            <div ng-show="showTerm">
+                <h1>{{topic}} Tweets Loaded</h1>
+                <div id="term">
+                </div>
+                <br>
             </div>
-            <br>
-            <h1>{{topic}} Hashtags counted</h1>
-            <div id="counted"></div>
-            <br>
-            <h1>{{topic}} Top Users counted</h1>
-            <div id="topuser"></div>
-            <br>
-            <h1>{{topic}} Sentiment</h1>
-            <div id="sentiment"></div>
-            <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut
-                labore
-                et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea
-                rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem
-                ipsum
-                dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et
-                dolore
-                magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum.
-                Stet
-                clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit
-                amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna
-                aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet
-                clita
-                kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+            <div ng-show="showCounted">
+                <h1>{{topic}} Hashtags counted</h1>
+                <div id="counted"></div>
+                <br>
+            </div>
+            <div ng-show="showTopUser">
+                <h1>{{topic}} Top Users counted</h1>
+                <div id="topuser"></div>
+                <br>
+            </div>
+            <div ng-show="showSentiment">
+                <h1>{{topic}} Sentiment</h1>
+                <div id="sentiment">
+                </div>
+            </div>
         </div>
     </div>
 </div>
